--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "next": "10.2.3",
     "node-sass": "^4.14.1",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-dom": "17.0.2"
   }
 }
